--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A modern, scalable backend for a full-featured e-commerce platform built with **TypeScript**, **Express**, **PostgreSQL**, and **RabbitMQ**. Designed for extensibility, real-time capabilities, and integration with a physical store.",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
